--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 
 {
   "name": "blackbot-black-discord",
-  "version": "3.3.1",
-  "description": "Blackbot - tickets + whitelist (WL) com painéis, fechamento e transcrições",
+  "version": "3.3.2",
+  "description": "Blackbot - tickets + whitelist (WL) com painéis, fechamento e transcrições (Forum ready)",
   "main": "src/index.js",
   "type": "module",
   "scripts": { "start": "node src/index.js" },
